Fix mobile viewport issue

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jackpot GBK</title>
+  <title>Jackpot GBK*</title>
   <link href="assets/style.css" rel="stylesheet" type="text/css">
   <script src="assets/main.js"></script>
   <script src="assets/game.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <!-- Meta tags -->
   <meta charset="UTF-8">
+  <meta name="title" content="Jackpot GBK*">
+  <meta name="description" content="*Gunting, Batu, Kertas">
 </head>
 <body>
   <div class="header">
@@ -52,7 +55,12 @@
         </p>
         <button class="color-primary">MULAI/BERHENTI</button>
         <p>
-          Kalau kamu tekan sekali,
+          Kalau kamu tekan sekali, akan ada ikon (gunting, batu, atau kertas)
+          yang cepat berubah. Tekan lagi untuk memilih ikon yang kamu mau.
+        </p>
+        <p>
+          Nantinya, ikon baru akan muncul di sebelahnya. Tekan tombol yang sama
+          untuk memilih sampai kepilih 3 item/ikon.
         </p>
       </div>
       <div class="card">
@@ -111,36 +119,53 @@
     <h1>Tentang, Hak Cipta, dan Lisensi</h1>
     <div class="cardcontainer">
       <div class="card color-primary">
-        <h1>Kenapa game ini dibuat</h1>
+        <h1>Kenapa game ini dibuat?</h1>
         <p>
-          Sebagai anak lulusan SMA yang tergila-2 dengan
-          <i><a href="https://www.google.com/search?q=chroicocephalus+novaehollandiae&tbm=isch" target="_blank">Chroicocephalus novaehollandiae</a></i>,
-          <i>game online</i>, medsos, website, dan <a href="https://iota.org" target="_blank">IOTA</a>,
-          aku membuat game ini untuk:
+          <b>Gue pernah berjanji untuk membuat game ini sejak 2017</b>, bahkan
+          sempat buat model di aplikasi <i>spreadsheet</i> (Microsoft Excel
+          / <a href="https://libreoffice.org">LibreOffice Calc</a>).
         </p>
-        <ul>
-          <li>membuktikan kalau saya bisa buat game sederhana</li>
-          <li>menguji kemampuan pemograman, khususnya web</li>
-          <li>meluangkan waktu libur kelulusan SMA (April-Agustus).</li>
-        </ul>
+        <p>
+          Sekarang, mumpung liburan panjang setelah lulus SMA masih panjang,
+          gue akhirnya mulai buat ini. Mainan ini dibuat menggunakan <i>frontend</i>
+          HTML, CSS, dan JavaScript dan tidak perlu pemasangan/<i>install</i> dulu
+          (langsung jalan).
+        </p>
       </div>
       <div class="card">
-        <h2>Bagikan ke</h2>
+        <h2>Rencana berikutnya?</h2>
+        <ul>
+          <li>Konversi ke PWA (Progressive Web App) untuk Android, iOS, iPadOS, dan Windows 10</li>
+          <li>Google Analytics (dan cara untuk matikan <i>tracking</i>)</li>
+          <li>Lokalisasi (ganti bahasa) ke Bahasa Inggris, dll.</li>
+          <li>Multiplayer (berbasis teknologi <a href="https://iota.org">IOTA</a>)</li>
+        </ul>
         <p>
-          <button onClick="shareTo('fb')">Facebook</button>
-          <button onClick="shareTo('tw')">Twitter</button>
-          <button onClick="shareTo('wa')">WhatsApp</button>
+          Semua ini pastinya tidak bisa dibuat secara cepat. Namun, kalau kamu
+          punya ide kamu bisa kasih saran ke <b>@reinhart1010</b> di
+          <a href="https://github.com/reinhart1010">GitHub</a>,
+          <a href="https://gitlab.com/reinhart1010">GitLab</a>,
+          <a href="https://instagram.com/reinhart1010">Instagram</a>, dan
+          <a href="https://twitter.com/reinhart1010">Twitter</a>.
+        </p>
+        <p>
+          Seluruh kode sumber dapat kamu lihat di <a href="https://github.com/reinhart1010/jackpotgbk/">GitHub</a> atau <a href="https://gitlab.com/reinhart1010/jackpotgbk/">GitLab</a>.
         </p>
       </div>
       <div class="card">
         <h2>Lisensi</h2>
-        <b>Hak Cipta 2017-2019 Reinhart Previano Koentjoro.</b>
+        <b>Hak Cipta 2017-2019 Reinhart Previano Koentjoro dan seluruh kontributor Jackpot GBK.</b>
         <p>
-          Kecuali dinyatakan lain, seluruh kode sumber proyek ini,
-          dapat dibagikan berdasarkan ketentuan menurut <a href="http://www.apache.org/licenses/LICENSE-2.0">Lisensi Apache, Versi 2.0.</a>
+          Kecuali dinyatakan lain, seluruh kode sumber proyek ini dapat didapatkan
+          secara gratis menurut ketentuan <a href="http://www.apache.org/licenses/LICENSE-2.0">Lisensi Apache, Versi 2.0.</a>
         </p>
-        <p>
-          Seluruh kode sumber dapat kamu lihat di <a href="https://github.com/reinhart1010/jackpotgbk/">GitHub</a> atau <a href="https://gitlab.com/reinhart1010/jackpotgbk/">GitLab</a>.
+        <p class="p2">
+          "Jackpot GBK" dan logo "Rekt (Reinhart Previano Koentjoro)" adalah
+          merek dagang milik Reinhart Previano Koentjoro.
+        </p>
+        <p class="p2">
+          Segala merek dagang yang tersebut merupakan milik masing-masing pemegang,
+          yang dapat terdaftar dalam wilayah Indonesia, Amerika Serikat, dan/atau negara lainnya.
         </p>
       </div>
     </div>
