Adding Google Analytics ang Bing Webmaster Tools

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Jackpot GBK*">
   <meta name="description" content="*Gunting, Batu, Kertas">
+  <meta name="msvalidate.01" content="7207A7D0D2D990AA325E9B161DA66A09"> <!-- GitHub -->
 </head>
 <body>
   <div class="header">
@@ -175,5 +176,8 @@
     <div class="cardcontainer" id="gamearea">
     </div>
   </div>
+  <!-- Analytics -->
+  <script src="assets/analytics.js">
+  </script>
 </body>
 </html>
