--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Main</h1>
         <p>Berapa pemain?</p>
         <input type="number" pattern="[0-9]*" id="playervalue" value="2">
-        <button onclick="togglePage('landing','game'); startGame()">MULAI</button>
+        <button onclick="startGame()">MULAI</button>
       </div>
       <div class="card">
         <h2>Catatan</h2>
