--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="card">
         <h2>Catatan</h2>
         <p>
-          Untuk saat ini, game ini hanya bisa dimainkan minimal 2 orang.
+          <b>Untuk saat ini, game ini hanya bisa dimainkan minimal 2 orang.</b>
           Kedepannya, nanti bakal ada mode satu orang (<i>single player</i>)
           dan <i>online multiplayer</i>.
         </p>
@@ -137,22 +137,21 @@
       <div class="card color-primary">
         <h1>Kenapa game ini dibuat?</h1>
         <p>
-          <b>Gue pernah berjanji untuk membuat game ini sejak 2017</b>, bahkan
-          sempat buat model di aplikasi <i>spreadsheet</i> (Microsoft Excel
+          <b>Aku pernah berjanji untuk membuat game ini sejak 2017</b>, bahkan
+          pernah buat model di aplikasi <i>spreadsheet</i> (Microsoft Excel
           / <a href="https://libreoffice.org">LibreOffice Calc</a>).
         </p>
         <p>
-          Sekarang, mumpung liburan panjang setelah lulus SMA masih panjang,
-          gue akhirnya mulai buat ini. Mainan ini dibuat menggunakan <i>frontend</i>
-          HTML, CSS, dan JavaScript dan tidak perlu pemasangan/<i>install</i> dulu
-          (langsung jalan).
+          Sekarang, mumpung liburan lulus SMA masih panjang, aku akhirnya buat
+          mainan ini pake <i>frontend</i> HTML, CSS, dan JavaScript. Kamu bisa
+          main ini di hp kamu tanpa harus <i>install</i> di App Store/Play Store.
         </p>
       </div>
       <div class="card">
         <h2>Rencana berikutnya?</h2>
         <ul>
           <li>Konversi ke PWA (Progressive Web App) untuk Android, iOS, iPadOS, dan Windows 10</li>
-          <li>Google Analytics (dan cara untuk matikan <i>tracking</i>)</li>
+          <li><del>Google Analytics (dan cara untuk matikan <i>tracking</i>)</del> <i>Selesai!</i></li>
           <li>Lokalisasi (ganti bahasa) ke Bahasa Inggris, dll.</li>
           <li>Multiplayer (berbasis teknologi <a href="https://iota.org">IOTA</a>)</li>
         </ul>
@@ -178,10 +177,6 @@
         <p class="p2">
           "Jackpot GBK" dan logo "Rekt (Reinhart Previano Koentjoro)" adalah
           merek dagang milik Reinhart Previano Koentjoro.
-        </p>
-        <p class="p2">
-          Segala merek dagang yang tersebut merupakan milik masing-masing pemegang,
-          yang dapat terdaftar dalam wilayah Indonesia, Amerika Serikat, dan/atau negara lainnya.
         </p>
       </div>
     </div>
